# agents_from_scratch

./: .gitignore  README.md  conversation.py  main.py  pyproject.toml
agent_from_scratch/: agent.py  chat_models.py  config.py  memory.py  openrouter_client.py  runtime.py  tools.py
skills/langgraph-docs/: SKILL.md
tests/: test_tools_run.py
