[project]
name = "agent-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"python-dotenv>=1.0.1",
	"requests>=2.32.3",
	"googletrans>=4.0.0-rc1",
	"python-weather>=0.1.0",
	"langchain>=0.3.0",
]

[project.scripts]
agent-from-scratch = "main:main"
